--- a/res/layout/activity_list_parcel.xml
+++ b/res/layout/activity_list_parcel.xml
@@ -9,7 +9,7 @@
     <!-- List of parcels. -->
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/list_parcel"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
