--- a/res/menu/menu_add.xml
+++ b/res/menu/menu_add.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <!-- Extended action menu for the ListParcelActivity -->
+
+
+    <!-- Add parcel action -->
+
     <item
         android:id="@+id/action_add_parcel"
         android:icon="@drawable/ic_action_new"
